# cosync

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  serial.rs
src/: cosync.rs  futures.rs  lib.rs  ready_to_run_queue.rs  serial.rs  task.rs  thread_notify.rs
src/futures/: arc_wake.rs  atomic_waker.rs  enter.rs  futures_unordered.rs  iter.rs  mod.rs  ready_to_run_queue.rs  task.rs  thread_notify.rs  waker_ref.rs
tests/try_build/: do_not_hold_ctx_through_await.rs  do_not_hold_ctx_through_await.stderr
