[package]
name = "cosync"
version = "0.2.1"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanbox-irl/cosync"
description = "a single threaded, sequential, parameterized task pool for games"
categories = ["game-development"]

[dependencies]
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
static_assertions = "1.1.0"
